[package]
name = "materialized"
version = "0.1.0"
edition = "2021"
default-run = "materialized"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
chrono = "0.4.34"
futures = "0.3.30"
reqwest = { version = "0.11.24", features = ["json"] }
sea-orm = {version = "0.12.14", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "bigdecimal", "chrono" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
uuid = { version = "1.7.0", features = ["v4"] }
bigdecimal = "0.4.3"
tokio-util = "0.7.10"
env_logger = "0.11.3"
log = "0.4.21"

[[bin]]
name = "gen_trans"
path = "src/generate_transaction.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
